# goose

./: .gitignore  404.html  CHANGELOG.md  CNAME  Cargo.toml  Dockerfile  README.md  build.rs  cspell.json  docker-entrypoint.sh  gaggle.html  goose.html  index.html  lefthook.yml  overview.html  print.html  searchindex.js  searchindex.json
.github/workflows/: CI.yml  builds.yml  doc.yml  tests.yml
.lefthook/pre-commit/: cargo_spellcheck  terraform_docs
book/: book.toml
book/src/: SUMMARY.md  cli.md  contributors.md  controlling-running-goose-load-test.md  controlling-running-swanling-load-test.md  coordinated-omission-mitigation.md  defaults.md  developers.md  distributed-load-test.md  getting-started.md  histograms.md  load-test-debug-logging.md  logging-load-test-errors.md  logging-load-test-requests.md  logging-load-test-tasks.md  overview.md  regatta.md  rustls.md  scheduling-swanling-task-sets.md  simple-example.md  throttling-requests.md  tips.md
book/src/blog/: add-signal-handling.md  calibration.md  debugging-an-async-app.md  simpler-signals.md
book/src/blog/data/calibration/: internal-kcup-miniserve-openssl-congested.csv  internal-kcup-miniserve-rustls-uncongested copy.csv  internal-kcup-miniserve-rustls-uncongested.csv  internal2-kcup-miniserve-rustls-uncongested.csv  string-bytes-revert.csv
book/src/blog/reports/20210822/: index.html
book/src/blog/reports/20210824/base/: benchmark.json  estimates.json  sample.json  tukey.json
book/src/blog/reports/20210824/change/: estimates.json
book/src/blog/reports/20210824/new/: raw.csv
book/src/blog/reports/20210824/report/: index.html
ci/: dictionary.txt  spellcheck.sh  validate.sh
examples/: drupal_loadtest.rs  simple.rs  simple_closure.rs
examples/the-internet/: Cargo.toml  README.md  docker-compose.yml  k3s-pod.yml  podman-pod.yaml  sti.rs
examples/the-internet/Dockerfile/: swanling
examples/umami/: admin.rs  common.rs  english.rs  main.rs  spanish.rs
grrs/: Cargo.toml
grrs/src/: cli.yml  lib.rs  main.rs
grrs/tests/: grss.rs
issue/: .gitrepo
misc/: contributors.html
regatta/: .tarpaulin.toml  Cargo.repro.toml  Cargo.toml  Criterion.toml  cargo-timing-20210901T091306Z.html  eg-log.txt  int.txt  kc.txt  ms.txt  terraform.tfstate
regatta/benches/: README.md  p2p.rs  recipes.json  repro.rs  reqs.rs  reqs_clientless.rs
regatta/benches/data/: p2p-20210727.json
regatta/examples/: 00-tokio-sig-c.rs  01-pages-hello-ok-c.rs  01-pages-hello-ok-int-c.rs  01-pages-hello-ok-sig-c.rs  01-pages-hello-ok-sig-prg-c.rs  05-pages-stream-4-ok-sig-1-c.rs  05-pages-stream-4-ok-sig-2-c.rs  05-pages-stream-4-ok-sig-c.rs  08-pages-stream-7-ok-sig-c.rs  README.md  blog-adding-async-signals.md
regatta/src/: calibrate-repro.rs  calibrate.rs  cli.yml  histogram.rs.txt  lib.rs  p2p.rs  raft.rs  tender.rs
regatta/src/calibrate/: client.rs  error.rs  handler.rs  server.rs
regatta/src/histogram/: hdr.rs.txt
regatta/src/p2p/: cassette.rs
regatta/src/tender/: app.rs  ui.rs
regatta/tests/: calibrate.rs  mock.rs  p2p.rs  regatta.rs
src/: controller.rs  goose.rs  lib.rs  logger.rs  manager.rs  metrics.rs  prelude.rs  raft.rs  report.rs  swanling.rs  throttle.rs  user.rs  util.rs  worker.rs
tests/: closure.rs  common.rs  controller.rs  defaults.rs  error.rs  integration.bats  logs.rs  no_normal_tasks.rs  one_taskset.rs  redirect.rs  scheduler.rs  sequence.rs  setup_teardown.rs  throttle.rs  verfiy.bats
tests/support/bats-assert/: .gitrepo
tests/support/bats-core/: .gitrepo
tests/support/bats-support/: .gitrepo
