[package]
name = "swanling"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "vX.X.X" git tag.
version = "0.1.0-dev"
authors = ["Begley Brothers Inc <begley.brothers@gmail.com>"]
edition = "2018"
description = "HTTP loadtest and benchmark framework inspired by Locust and Taurus."
homepage = "https://swanling.io"
documentation = "https://swanling.io"
repository = "https://github.com/begleybrothers/swanling"
readme = "README.md"
categories = ["asynchronous", "simulation"]
keywords = ["loadtest", "benchmark", "web", "microservice", "framework"]
license = "Apache-2.0"
exclude = [
    "book/*",
    "ci/*",
]

[workspace]
members = ["regatta"]

[dependencies]
async-trait = "0.1"
chrono = "0.4"
ctrlc = "3.1"
flume = "0.10"
futures = "0.3"
gumdrop = "0.8"
http = "0.2"
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
num_cpus = "1.0"
num-format = "0.4"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11",  default-features = false, features = [
    "cookies",
    "json",
] }
serde = { version = "1.0", features = [
    "derive",
] }
serde_cbor = "0.11"
serde_json = "1.0"
simplelog = "0.10"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
    "sync",
] }
tokio-tungstenite = "0.15"
tungstenite = "0.14"
url = "2"

# optional dependencies
nng = { version = "1.0", optional = true }

[features]
default = ["reqwest/default-tls"]
regatta = ["nng"]
rustls-tls = ["reqwest/rustls-tls", "tokio-tungstenite/rustls-tls"]

[build-dependencies]
rustc_version = "0.3"

[dev-dependencies]
httpmock = "0.5"
serial_test = "0.5"
native-tls = "0.2"
rustls = "0.19"
xsv = "0.13"
pprof = { version = "0.5", features = ["criterion", "flamegraph", "protobuf"] }

[profile.bench]
debug = true

## TechEmpower benchmark settings for hyper
#
[profile.release]
opt-level = 3
codegen-units = 1
lto = true

## Historical Benchmarks
#
# extern crate swanlingv0;
#
# [dev-dependencies.swanlingv0]
# package = "swanling"
# version = "=0.0.0"
