[package]
name = "grrs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap-verbosity-flag = "0.3.1"
env_logger = "0.8.4"
indicatif = "0.16.2"
log = "0.4.0"
structopt = "0.3.13"

[dev-dependencies]
mockall = "0.10.2"
mockall_double = "0.2.0"