[package]
name = "grrs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "grrs"
path = "bin/grrs.rs"

[lib]

[dependencies]
# Flexible concrete Error type built on std::error::Error
anyhow = "1.0.40"
clap = {version = "~2.33.3", features = ["yaml"]}
clap-verbosity-flag = "0.3.1"
env_logger = "0.8.4"
# A progress bar and cli reporting library for Rust
indicatif = "0.16.2"
log = "0.4.0"
structopt = "0.3.13"
strum = "0.21"
strum_macros = "0.21"
# derive(Error)
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "1.0.7"
mockall = "0.10.2"
mockall_double = "0.2.0"
predicates = "2.0.0"
tempfile = "3.2.0"