[package]
name = "regatta"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["termion"]

[[bin]]
name = "regatta"
path = "bin/regatta.rs"

[[bin]]
name = "p2p"
path = "bin/p2p.rs"

[[bin]]
name = "raft"
path = "bin/raft.rs"

[[bin]]
name = "raft-access"
path = "bin/raft-access.rs"

[[bin]]
name = "raft-admin"
path = "bin/raft-admin.rs"

[[bin]]
name = "tender"
path = "bin/tender.rs"

[dependencies]
# Flexible concrete Error type built on std::error::Error
anyhow = "1.0.40"
async-trait = "0.1"
bincode = "1.3"
bytes = { version = "1", features = ["serde"] }
clap = {version = "~2.33.3", features = ["yaml"]}
clap-verbosity-flag = "0.3.1"
config = "0.11"
env_logger = "0.9"
futures = "0.3.15"
hdrhistogram = "7"
heapless = "0.7"
# A progress bar and cli reporting library for Rust
indicatif = "0.16.2"
libp2p = { version = "^0.39.1", features = ["tcp-tokio", "dns-tokio"] }
lol-core = { version="", features = ["persistency"] }
log = "0.4"
once_cell = "1.5"
postcard = "0.7"
pretty_env_logger = "0.4"
serde = {version = "=1.0", features = ["derive"] }
serde_json = "=1.0"
signal-hook = "0.3.9"
signal-hook-tokio = { version = "0.3.0", features = ["futures-v0_3"]}
structopt = "0.3.13"
strum = "0.21"
strum_macros = "0.21"
termion = { version = "1.5", optional = true }
# derive(Error)
thiserror = "1.0"
tokio = { version = "^1.8", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time"
] }
tokio-tungstenite = "0.15"
tokio-stream = "0.1"
tonic = "0.4"
tui = "0.14"
tungstenite = "0.14"
url = "2.2"

[dev-dependencies]
assert_cmd = "1.0.7"
duct = "0.13.5"
mockall = "0.10.2"
mockall_double = "0.2.0"
predicates = "2.0.0"
rexpect = "0.4.0"
tempfile = "3.2.0"