[package]
name = "regatta"
version = "0.1.0"
edition = "2018"
#edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["termion"]
# For skip-build see #7 here:
# https://jondot.medium.com/8-steps-for-troubleshooting-your-rust-build-times-2ffc965fd13e
skip-build = []
# https://stackoverflow.com/questions/35711044/how-can-i-specify-binary-only-dependencies
# See 2): https://stackoverflow.com/a/46017284
#build-p2p = ["libp2p"]

[[bin]]
name = "regatta"
path = "bin/regatta.rs"
# [criterion-bench-workaround]
bench = false

[[bin]]
name = "p2p"
path = "bin/p2p.rs"
# [criterion-bench-workaround]
bench = false
# See 2): https://stackoverflow.com/a/46017284
#required-features = ["build-p2p"]

[[bin]]
name = "raft"
path = "bin/raft.rs"
# [criterion-bench-workaround]
bench = false

[[bin]]
name = "raft-access"
path = "bin/raft-access.rs"
# [criterion-bench-workaround]
bench = false

[[bin]]
name = "raft-admin"
path = "bin/raft-admin.rs"
# [criterion-bench-workaround]
bench = false

[[bin]]
name = "tender"
path = "bin/tender.rs"
# [criterion-bench-workaround]
bench = false

[[bin]]
name = "reqs"
path = "bin/reqs.rs"
# [criterion-bench-workaround]
bench = false

[lib]
# [criterion-bench-workaround]
bench = false
path = "src/lib.rs"

# References:
# [criterion-bench-workaround]: https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
#
[dependencies]
# Flexible concrete Error type built on std::error::Error
anyhow = "1.0.40"
async-stream = "0.3"
async-trait = "0.1"
bincode = "1.3"
bytes = { version = "1", features = ["serde"] }
clap = { version = "~2.33.3", features = ["yaml"] }
clap-verbosity-flag = "0.3.1"
config = "0.11"
ctrlc = { version = "3.1", features = ["termination"] }
env_logger = "0.9"
futures = "0.3.15"
futures-signals = "0.3.22"
futures-util = "0.3.17"
hdrhistogram = "7"
heapless = "0.7"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.22.1"
# A progress bar and cli reporting library for Rust
indicatif = "0.16.2"
lazy_static = "1.4.0"
libc = "0.2"
libp2p = { version = "^0.39.1", features = ["tcp-tokio", "dns-tokio"], optional = false }
linya = "0.2"
lol-core = { version="0.7.2", features = ["persistency"] }
log = "0.4"
nix = "0.22.1"
num_cpus = "1.13.0"
once_cell = "1.5"
postcard = "0.7"
pretty_env_logger = "0.4"
rand = "0.8.3"
regex = "1"
serde = {version = "=1.0", features = ["derive"] }
serde_json = "=1.0"
signal-hook = "0.3.9"
signal-hook-tokio = { version = "0.3.0", features = ["futures-v0_3"]}
structopt = "0.3.13"
strum = "0.21"
strum_macros = "0.21"
termion = { version = "1.5", optional = true }
# derive(Error)
thiserror = "1.0"
tokio = { version = "^1.8", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time"
] }
tokio-tungstenite = "0.15"
tokio-stream = "0.1"
tonic = "0.4"
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
tui = "0.14"
tungstenite = "0.14"
url = "2.2"
warp = "0.3.1"

[dev-dependencies]
assert_cmd = "1.0.7"
cargo-criterion = "1.0.1"
criterion = {version = "0.3", features = ["async_tokio", "html_reports"]}
critcmp = "0.1.7"
duct = "0.13.5"
lazy_static = "=1.4.0"
mockall = "0.10.2"
mockall_double = "0.2.0"
pprof = { version = "0.5", features = ["criterion", "flamegraph", "protobuf"] }
predicates = "2.0.0"
plotters = "0.3"
rexpect = "0.4.0"
tempfile = "3.2.0"
wiremock = "0.5.6"
sccache = "0.2.15"

[profile.dev]
lto = false

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = [
    "-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"
]

[[bench]]
name = "p2p"
harness = false

[[bench]]
name = "reqs"
harness = false

# [[bench]]
# name = "repro"
# harness = false
